[package]
name = "Game2DEngine"
version = "0.1.0"
authors = ["Oliver Chang <ollieskywalker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.12"
fontdue = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profil.release]
debug = true
lto = "thin"
opt-level = 3
codegen-units = 1